fix footer icons, left-align content, lower mobile font sizes

--- a/assets/fresh/partials/_footer.scss
+++ b/assets/fresh/partials/_footer.scss
@@ -16,7 +16,7 @@ footer.footer-dark {
   .footer-column {
     .footer-header h3 {
       font-weight: 500;
-      font-size: 1.2rem;
+      font-size: 1rem;
       text-transform: uppercase;
       letter-spacing: 1px;
       margin-bottom: 20px;
